force-app/main/default/objects/Purchase_Order__c/fields/Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Approval_Status__c</fullName>
    <description>Approval lifecycle status for governance and auditability.</description>
    <label>Approval Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Not Submitted</fullName><default>true</default><label>Not Submitted</label></value>
            <value><fullName>Pending Approval</fullName><default>false</default><label>Pending Approval</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>