force-app/main/default/objects/Purchase_Order__c/fields/Budget_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_Amount__c</fullName>
    <description>Approved spending budget for this purchase order.</description>
    <label>Budget Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>