force-app/main/default/objects/Purchase_Order__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Business department requesting this purchase.</description>
    <label>Department</label>
    <length>80</length>
    <type>Text</type>
</CustomField>