force-app/main/default/objects/Purchase_Order__c/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <description>Discount applied to the order total.</description>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>