force-app/main/default/objects/Purchase_Order__c/fields/Is_Overdue__c.field-meta.xml
<CustomField>
    <fullName>Is_Overdue__c</fullName>
    <description>Indicates order is overdue and still not closed/cancelled.</description>
    <formula>AND(
NOT(ISBLANK(Expected_Delivery_Date__c)),
Expected_Delivery_Date__c &lt; TODAY(),
NOT(ISPICKVAL(Status__c, 'Closed')),
NOT(ISPICKVAL(Status__c, 'Cancelled'))
)</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Is Overdue</label>
    <type>Checkbox</type>
</CustomField>