force-app/main/default/objects/Purchase_Order__c/fields/Remaining_Budget__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Budget__c</fullName>
    <description>Budget amount remaining after current total amount.</description>
    <formula>BLANKVALUE(Budget_Amount__c, 0) - BLANKVALUE(Total_Amount__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Budget</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>