force-app/main/default/objects/Purchase_Order__c/fields/Requester__c.field-meta.xml
<CustomField>
    <fullName>Requester__c</fullName>
    <description>Person requesting this purchase.</description>
    <label>Requester</label>
    <required>true</required>
    <type>Text</type>
    <length>80</length>
</CustomField>