force-app/main/default/objects/Purchase_Order__c/fields/Shipping_Amount__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Amount__c</fullName>
    <description>Shipping and handling charges for this order.</description>
    <label>Shipping Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>