force-app/main/default/objects/Purchase_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Lifecycle stage of the purchase order.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>true</default><label>Draft</label></value>
            <value><fullName>Submitted</fullName><default>false</default><label>Submitted</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Ordered</fullName><default>false</default><label>Ordered</label></value>
            <value><fullName>Partially Received</fullName><default>false</default><label>Partially Received</label></value>
            <value><fullName>Received</fullName><default>false</default><label>Received</label></value>
            <value><fullName>Closed</fullName><default>false</default><label>Closed</label></value>
            <value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>