force-app/main/default/objects/Purchase_Order__c/fields/Subtotal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Subtotal_Amount__c</fullName>
    <description>Rollup sum of all line item totals.</description>
    <label>Subtotal Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <summarizedField>Purchase_Order_Line__c.Line_Total__c</summarizedField>
    <summaryForeignKey>Purchase_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>