force-app/main/default/objects/Purchase_Order__c/fields/Supplier_Email__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Email__c</fullName>
    <description>Email for supplier communications.</description>
    <label>Supplier Email</label>
    <type>Email</type>
</CustomField>