force-app/main/default/objects/Purchase_Order__c/fields/Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>Tax_Amount__c</fullName>
    <description>Total tax amount applied to the purchase order.</description>
    <label>Tax Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>