force-app/main/default/objects/Purchase_Order__c/validationRules/Approved_Within_Budget.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Approved orders must not exceed budget when budget is provided.</description>
    <errorConditionFormula>AND(
        ISPICKVAL(Approval_Status__c, 'Approved'),
        NOT(ISBLANK(Budget_Amount__c)),
        BLANKVALUE(Total_Amount__c, 0) &gt; Budget_Amount__c
    )</errorConditionFormula>
    <errorMessage>Approved purchase orders cannot exceed their budget amount.</errorMessage>
</ValidationRule>