force-app/main/default/objects/Purchase_Order__c/validationRules/Closed_Requires_Amount.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Closed orders should have a positive total.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, 'Closed'), BLANKVALUE(Total_Amount__c, 0) &lt;= 0)</errorConditionFormula>
    <errorMessage>Closed purchase orders must have a total amount greater than zero.</errorMessage>
</ValidationRule>