force-app/main/default/objects/Purchase_Order__c/validationRules/Expected_Delivery_After_Order.validationRule-meta.xml
<ValidationRule>
    <active>true</active>
    <description>Expected delivery must be on or after order date.</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Expected_Delivery_Date__c)), NOT(ISBLANK(Order_Date__c)), Expected_Delivery_Date__c &lt; Order_Date__c)</errorConditionFormula>
    <errorDisplayField>Expected_Delivery_Date__c</errorDisplayField>
    <errorMessage>Expected delivery date cannot be earlier than order date.</errorMessage>
</ValidationRule>