force-app/main/default/objects/Purchase_Order__c/listViews/All_Purchase_Orders.listView-meta.xml
<ListView>
    <filterScope>Everything</filterScope>
    <label>All Purchase Orders</label>
</ListView>