force-app/main/default/objects/Purchase_Order__c/listViews/Open_Purchase_Orders.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Supplier_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Expected_Delivery_Date__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>Open Purchase Orders</label>
</ListView>