force-app/main/default/objects/Purchase_Order__c/listViews/Over_Budget_POs.listView-meta.xml
<ListView>
    <columns>Name</columns>
    <columns>Department__c</columns>
    <columns>Budget_Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Remaining_Budget__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Remaining_Budget__c</field>
        <operation>lessThan</operation>
        <value>0</value>
    </filters>
    <label>Over Budget POs</label>
</ListView>